Add sign in page

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://ufollow.io/favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400&display=swap">
     <title>ufollow</title>
   </head>
-  <body>
+  <body class="bg-gradient-primary">
     <noscript>
       <strong>Para que o aplicativo da ufollow funcione corretamente é necessário habilitar o JavaScript.</strong>
     </noscript>
